--- a/src/main/resources/assets/modtutoriel/lang/en_US.lang
+++ b/src/main/resources/assets/modtutoriel/lang/en_US.lang
@@ -1,2 +1,4 @@
 item.tutoriel.name=Item Tutorial
 item.tutoriel2.name=Item Tutorial 2
+tile.tutoriel.name=Block Tutorial
+tile.tutoriel2.name=Block Tutorial 2
