Ajout d'un mob basique

--- a/src/main/resources/assets/modtutoriel/lang/en_US.lang
+++ b/src/main/resources/assets/modtutoriel/lang/en_US.lang
@@ -2,3 +2,4 @@ item.tutoriel.name=Item Tutorial
 item.tutoriel2.name=Item Tutorial 2
 tile.tutoriel.name=Block Tutorial
 tile.tutoriel2.name=Block Tutorial 2
+entity.mobTutoriel.name=Tutorial Mob
