--- a/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
+++ b/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
@@ -2,3 +2,4 @@ item.tutoriel.name=Item Tutoriel
 item.tutoriel2.name=Item Tutoriel 2
 tile.tutoriel.name=Bloc Tutoriel
 tile.tutoriel2.name=Bloc Tutoriel 2
+entity.mobTutoriel.name=Mob Tutoriel
