Ajout d'un tile entity

--- a/src/main/resources/assets/modtutoriel/lang/en_US.lang
+++ b/src/main/resources/assets/modtutoriel/lang/en_US.lang
@@ -22,3 +22,5 @@ entity.mobTutoriel.name=Tutorial Mob
 sword.mode.message.0=Burn player
 sword.mode.message.1=Burn mob
 sword.mode.message.2=Burn animals
+
+tile.tutoriel2.number=Value : %d
