Organisation des importations + Ajout d'un container et un gui au bloc tutoriel 2

--- a/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
+++ b/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
@@ -24,3 +24,5 @@ sword.mode.message.1=Enflammer les monstres
 sword.mode.message.2=Enflammer les animaux
 
 tile.tutoriel2.number=Valeur : %d
+
+tile.cupboard=Placard
