ajout d'une touche et approfondissement des paquets

--- a/src/main/resources/assets/modtutoriel/lang/en_US.lang
+++ b/src/main/resources/assets/modtutoriel/lang/en_US.lang
@@ -26,3 +26,5 @@ sword.mode.message.2=Burn animals
 tile.tutoriel2.number=Value : %d
 
 tile.cupboard=Cupboard
+
+modtutoriel.playerList=Player list
