--- a/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
+++ b/src/main/resources/assets/modtutoriel/lang/fr_FR.lang
@@ -26,3 +26,5 @@ sword.mode.message.2=Enflammer les animaux
 tile.tutoriel2.number=Valeur : %d
 
 tile.cupboard=Placard
+
+modtutoriel.playerList=Liste des joueurs
